fix: scrollbar

--- a/client/index.scss
+++ b/client/index.scss
@@ -312,5 +312,5 @@ input {
   background-color: rgba(0,0,0,.20);
   font-weight: 400;
   margin-left: 10px;
-  border-radius: 5px
+  border-radius: 5px;
 }
